# Kaimetsu-Engine

./: CMakeLists.txt  build-windows.bat
Assets/Shaders/: Model.frag  Model.vert
Engine/: CMakeLists.txt
Engine/src/: pch.hpp
Engine/src/Entity/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp
Engine/src/Models/: TexturedModel.cpp  TexturedModel.hpp
Engine/src/RenderEngine/: Loader.cpp  Loader.hpp  RawModel.cpp  RawModel.hpp  Renderer.cpp  Renderer.hpp
Engine/src/Shader/: Shader.hpp  StaticShader.hpp
Engine/src/Textures/: ModelTexture.cpp  ModelTexture.hpp
Engine/src/Window/: Window.cpp  Window.hpp
Game/: CMakeLists.txt
Game/src/: Game.cpp
Windows/includes/pybind11/: pytypes.h
Windows/includes/pybind11/detail/: common.h
